# fattail

./: fattail_demo.ipynb  pyproject.toml
